--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,37 @@
-spring.datasource.test1.url=jdbc:mysql://localhost:3306/springboot2
-spring.datasource.test1.username=root
-spring.datasource.test1.password=1234
-spring.datasource.test1.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.test1.url=jdbc:mysql://localhost:3306/springboot2
+#spring.datasource.test1.username=root
+#spring.datasource.test1.password=1234
+#spring.datasource.test1.driverClassName=com.mysql.jdbc.Driver
+#
+#spring.datasource.test2.url=jdbc:mysql://localhost:3306/dbgirl
+#spring.datasource.test2.username=root
+#spring.datasource.test2.password=1234
+#spring.datasource.test2.driverClassName=com.mysql.jdbc.Driver
 
-spring.datasource.test2.url=jdbc:mysql://localhost:3306/dbgirl
-spring.datasource.test2.username=root
-spring.datasource.test2.password=1234
-spring.datasource.test2.driverClassName=com.mysql.jdbc.Driver
+
+#配置分布式事务管理技术
+mysql.datasource.test1.url=jdbc:mysql://localhost:3306/springboot2
+mysql.datasource.test1.username=root
+mysql.datasource.test1.password=1234
+
+mysql.datasource.test1.minPoolSize = 3
+mysql.datasource.test1.maxPoolSize = 25
+mysql.datasource.test1.maxLifetime = 20000
+mysql.datasource.test1.borrowConnectionTimeout = 30
+mysql.datasource.test1.loginTimeout = 30
+mysql.datasource.test1.maintenanceInterval = 60
+mysql.datasource.test1.maxIdleTime = 60
+
+
+
+mysql.datasource.test2.url=jdbc:mysql://localhost:3306/dbgirl
+mysql.datasource.test2.username=root
+mysql.datasource.test2.password=1234
+
+mysql.datasource.test2.minPoolSize = 3
+mysql.datasource.test2.maxPoolSize = 25
+mysql.datasource.test2.maxLifetime = 20000
+mysql.datasource.test2.borrowConnectionTimeout = 30
+mysql.datasource.test2.loginTimeout = 30
+mysql.datasource.test2.maintenanceInterval = 60
+mysql.datasource.test2.maxIdleTime = 60
