--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,3 +35,8 @@ mysql.datasource.test2.borrowConnectionTimeout = 30
 mysql.datasource.test2.loginTimeout = 30
 mysql.datasource.test2.maintenanceInterval = 60
 mysql.datasource.test2.maxIdleTime = 60
+
+
+spring.profiles.active=prd
+server.port=8888
+#server.context-path=/test
